trybuild/fail/empty_attr.stderr
error: Couldn't parse attributes: expected attribute arguments in parentheses: #[generic_new(...)]
 --> trybuild/fail/empty_attr.rs:6:5
  |
6 |     #[generic_new]
  |     ^^^^^^^^^^^^^^

error[E0599]: no function or associated item named `new` found for struct `Foo` in the current scope
  --> trybuild/fail/empty_attr.rs:14:10
   |
5  | struct Foo {
   | ---------- function or associated item `new` not found for this
...
14 |     Foo::new(1usize);
   |          ^^^ function or associated item not found in `Foo`
